fixes overflow issues, updates correction of large numbers to the use of exponents

--- a/styles.css
+++ b/styles.css
@@ -8,44 +8,49 @@ div {
     align-items: center;
     min-height: 100%;
     min-height: 100vh;
+    min-width: 0
 }
 
 .grid-container {
     display: grid;
     grid-gap: 15px;
-    height: 500px;
-    width: 500px;
+    height: 600px;
+    width: 400px;
     grid-template-rows: 1fr 2.5fr;
 }
 
 .grid-display {
     display: grid;
+    min-width: 0;
     grid-template-rows: auto;
 }
 
 .display-history {
     display: flex;
+    flex-direction: row-reverse;
+    white-space: nowrap;
     align-items: center;
-    justify-content: end;
-    padding-right: 15px;
+    overflow: scroll;
     height: 45px;
+    padding-right: 15px;
 }
 
 .display-inputs {
     display: flex;
+    flex-direction: row-reverse;
+    overflow: scroll;
     align-items: center;
-    justify-content: end;
     padding-right: 15px;
     height: 45px;
 
 }
 
 .display-preview {
-    display: flex;
-    align-items: center;
     justify-content: end;
+    align-items: center;
     padding-right: 50px;
     height: 45px;
+    min-width: 0
 }
 
 .grid-menu {
